[tool.poetry]
name = "turtle-experiment"
version = "0.1.0"
description = "Turtle Experiments"
authors = ["sinapy <si.sarsharpoor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
